name:                reflex-dom-ace
version:             0.1
license:             BSD3
author:              Doug Beardsley
maintainer:          mightybyte@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs: src
  js-sources: ace-builds/src-min-noconflict/ace.js

  exposed-modules:
    Reflex.Dom.ACE

  build-depends:
      base
    , ghcjs-dom
    , mtl
    , reflex
    , reflex-dom
    , text

  if impl(ghcjs)
    build-depends: ghcjs-base

  ghc-options: -Wall -fno-warn-unused-do-bind -fno-warn-orphans
  cpp-options: -D_GHCJS_ -DGHCJS_GC_INTERVAL=60000

  default-language:    Haskell2010

