name:                reflex-dom-ace
version:             0.2.0.0
license:             BSD3
author:              Doug Beardsley
maintainer:          mightybyte@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs: src

  exposed-modules:
    Reflex.Dom.ACE

  build-depends:
      base
    , containers
    , data-default
    , ghcjs-dom
    , jsaddle
    , jsaddle-dom
    , lens
    , mtl
    , reflex
    , reflex-dom
    , text

  if impl(ghcjs)
    cpp-options: -DGHCJS_GC_INTERVAL=60000

  ghc-options: -Wall -fno-warn-unused-do-bind -fno-warn-orphans

  default-language: Haskell2010

