name:                reflex-dom-ace
version:             0.2.0.0
license:             BSD3
author:              Doug Beardsley
maintainer:          mightybyte@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs: src

  exposed-modules:
    Reflex.Dom.ACE

  build-depends:
      base
    , containers
    , data-default
    , ghcjs-dom
    , jsaddle
    , lens
    , mtl
    , reflex
    , reflex-dom
    , text

  if impl(ghcjs)
    cpp-options: -DGHCJS_GC_INTERVAL=60000

  ghc-options: -Wall -fno-warn-unused-do-bind -fno-warn-orphans

  default-language: Haskell2010

-- Commented out for now to avoid build dependency issues
-- executable reflex-dom-ace-exe
--   buildable:           False
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , directory
--                      , jsaddle
--                      , jsaddle-warp
--                      , reflex-dom
--                      , reflex-dom-core
--                      , reflex-dom-ace
--                      , text
--                      , wai-app-static
